# bbs-lib

./: .gitignore  CMakeLists.txt  README.md
examples/: encryption_demo.cpp  factor_demo.cpp  partial_seed_demo.cpp  production_demo.cpp  sidechannel_demo.cpp  toy_demo.cpp
experiments/: exp_factor_time_vs_known_pq.cpp  exp_factor_time_vs_n.cpp  exp_factor_time_vs_partial_seed.cpp
include/: bbs_production.hpp  bbs_sidechannel.hpp  bbs_toy.hpp  bbs_utils.hpp
src/: bbs_production.cpp  bbs_sidechannel.cpp  bbs_toy.cpp  bbs_utils.cpp
tests/: randomness_test_prod.cpp  randomness_test_toy.cpp
